# EEG-ML-BB-integration

./: .pre-commit-config.yaml  main.py  pyproject.toml
classes/: binaural_beat_generator.py  lsl_stream.py  mock_lsl.py  xdf_loader.py
classes/ETP/: autocorrect.py  compute_bias.py  config.py  signal_processing.py
examples/: example_bbg.py  example_bias.py  example_freq_phase.py  example_xdf.py  simulated_bias.py
lsl_scripts/: lsl_streamer.py
modules/: binaural_beat_generator.py
